# Voladi-web

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  Makefile  Procfile  README.md  create_default_superuser.py  cronjobs.txt  db_dump.sh  db_sync.sh  docker-compose.local.yml  docker-compose.private.yml.example  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  fabfile.py  pyproject.toml  secrets.yml.example  update_cronjobs.py
confd/templates/: nginx.conf.tmpl  uwsgi.ini.tmpl
locales/de/LC_MESSAGES/: django.po
web/: context.py  forms.py  jazzmin.py  mail.py  settings.py  urls.py  views.py
web/static/django/css/: main.css
web/static/wagtail/css/: custom-wagtail-admin.css
web/static/web/fonts/: fonts.css
web/static_src/: package-lock.json  package.json  tailwind.config.js
web/static_src/src/: styles.css
web/templates/menus/main-menu/: level_1.html  level_2.html  level_3.html
web/templates/povulo/: _language_switcher.html
web/templates/wagtailadmin/: admin_base.html  home.html  login.html
web/templates/web/: _contact_form.html  base.html  home_page.html  index.html  navigation.html
web/templates/web/components/: _heading_section.html
web/templates/web/components/links/: _button_primary.html  _button_transparent.html
web/templates/web/email/: contact_form.html
